// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Modal Default 1`] = `
<div
  className="sc-Rmtcm psENA"
>
  <div
    className="sc-csuQGl bUWxJa"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="sc-bRBYWo crvFYk"
      >
        <div
          className="sc-bwzfXH PFWgi"
        >
          <div
            className="sc-kAzzGY khqJpA"
            role="heading"
          >
            Would you like me to be your role modal?
          </div>
          <div
            className="sc-bwzfXH hiMtnc"
          >
            <button
              className="sc-htoDjs cPnyBV"
              color={undefined}
              disabled={undefined}
              icon={undefined}
              id={undefined}
              onClick={[Function]}
              title="close"
              type="button"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI MOBcS"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </button>
          </div>
        </div>
        <div
          className="sc-gPEVay jzUlKR"
        >
          <div
            className="sc-iRbamj iHxIYy"
          >
            <div
              className="sc-jlyJG gtxcUz"
            />
            <div
              className="sc-bwzfXH lkXbup"
            >
              <p
                className="sc-bxivhb kFVWeI"
              >
                
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ut mi ligula. Phasellus tellus nulla,
cursus sit amet dolor eu, sodales facilisis tortor. Maecenas sed arcu quis est pharetra molestie sed
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh. Mauris tempor libero purus, vitae lacinia
felis hendrerit in. Vestibulum rhoncus vitae ipsum vel placerat.
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh. Mauris tempor libero purus, vitae lacinia
felis hendrerit in. Vestibulum rhoncus vitae ipsum vel placerat.
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh.
              </p>
            </div>
            <div
              className="sc-gipzik hhjjOC"
            />
          </div>
        </div>
        <div
          className="sc-jTzLTM hDWBpv"
        >
          <div
            className="sc-bwzfXH bQUPIj"
          >
            <div
              style={
                Object {
                  "flexGrow": 1,
                }
              }
            >
              <div
                className="sc-bwzfXH lalwsM"
              >
                <div
                  className="sc-bwzfXH hwWvSq"
                >
                  <button
                    className="sc-htoDjs kwPcoU"
                    color={undefined}
                    disabled={undefined}
                    icon={undefined}
                    id={undefined}
                    onClick={[Function]}
                    title="Activate"
                    type="button"
                  >
                    Activate
                  </button>
                </div>
                <div
                  className="sc-bwzfXH hwWvSq"
                >
                  <button
                    className="sc-htoDjs jDujXu"
                    color={undefined}
                    disabled={undefined}
                    icon={undefined}
                    id={undefined}
                    onClick={[Function]}
                    title="Close"
                    type="button"
                  >
                    Close
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Without closeAction 1`] = `
<div
  className="sc-Rmtcm psENA"
>
  <div
    className="sc-csuQGl bUWxJa"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="sc-bRBYWo crvFYk"
      >
        <div
          className="sc-bwzfXH PFWgi"
        >
          <div
            className="sc-kAzzGY khqJpA"
            role="heading"
          >
            Would you like me to be your role modal?
          </div>
        </div>
        <div
          className="sc-gPEVay jzUlKR"
        >
          <div
            className="sc-iRbamj iHxIYy"
          >
            <div
              className="sc-jlyJG gtxcUz"
            />
            <div
              className="sc-bwzfXH lkXbup"
            >
              <p
                className="sc-bxivhb kFVWeI"
              >
                
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ut mi ligula. Phasellus tellus nulla,
cursus sit amet dolor eu, sodales facilisis tortor. Maecenas sed arcu quis est pharetra molestie sed
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh. Mauris tempor libero purus, vitae lacinia
felis hendrerit in. Vestibulum rhoncus vitae ipsum vel placerat.
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh. Mauris tempor libero purus, vitae lacinia
felis hendrerit in. Vestibulum rhoncus vitae ipsum vel placerat.
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh.
              </p>
            </div>
            <div
              className="sc-gipzik hhjjOC"
            />
          </div>
        </div>
        <div
          className="sc-jTzLTM hDWBpv"
        >
          <div
            className="sc-bwzfXH bQUPIj"
          >
            <div
              style={
                Object {
                  "flexGrow": 1,
                }
              }
            >
              <div
                className="sc-bwzfXH lalwsM"
              >
                <div
                  className="sc-bwzfXH hwWvSq"
                >
                  <button
                    className="sc-htoDjs kwPcoU"
                    color={undefined}
                    disabled={undefined}
                    icon={undefined}
                    id={undefined}
                    onClick={[Function]}
                    title="Activate"
                    type="button"
                  >
                    Activate
                  </button>
                </div>
                <div
                  className="sc-bwzfXH hwWvSq"
                >
                  <button
                    className="sc-htoDjs jDujXu"
                    color={undefined}
                    disabled={undefined}
                    icon={undefined}
                    id={undefined}
                    onClick={[Function]}
                    title="Close"
                    type="button"
                  >
                    Close
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
